# checklens

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
checklens/: __init__.py  app.py
tests/: test_app.py
