[tool.poetry]
name = "checklens"
version = "0.1.0"
description = ""
authors = ["gigimon <gigimon4ik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
Flask = "^2.0.3"
pytest = "^7.0.1"
redis = "^4.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
